# gpf

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/boolean3d/: adaptive_subdivide.rs  mod.rs  tet_set.rs
src/disjoint_set/: mod.rs
src/geometry/: bbox.rs  cylinder.rs  mod.rs  plane.rs
src/graphcut/: mod.rs  push_relabel_fifo.rs
src/math/: mod.rs
src/mesh/: manifold_mesh.rs  mesh.rs  mesh_core_data.rs  mesh_data.rs  mesh_macro.rs  mod.rs  surface_mesh.rs
src/mesh/element/: boundary_loop.rs  edge.rs  face.rs  halfedge.rs  macros.rs  mod.rs  vertex.rs
src/polygonlization/: bsp_complex.rs  conforming_mesh.rs  mod.rs
src/predicates/: expansion_number.rs  generic_point.rs  interval_number.rs  less_than.rs  mod.rs  orient2d.rs  orient3d.rs  predicates.rs
src/triangle/: convex_2.rs  convex_3.rs  mod.rs  tetrahedron.rs  triangle.rs
tests/: test_boolean3d.rs  test_convex_2.rs  test_convex_3.rs  test_graph_cut.rs  test_make_polyhedral_mesh.rs  test_mesh.rs  test_mesh_data.rs  test_predicates.rs  test_triangulation.rs
tests/data/: solidFix.json
