[package]
name = "gpf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = {version = "3.13.0", features = ["collections"]}
itertools = "0.10.5"
rand = {version = "0.8.5", features = ["small_rng"]}

[dev-dependencies]
